--- a/Login/index.html
+++ b/Login/index.html
@@ -17,7 +17,7 @@
             <p>Iniciar sesión</p>
             <input type="text" name= "" placeholder="Usuario">
             <input type="password" name="" placeholder="Contraseña">
-            <input type="submit" name="" value="Login">
+            <input type="submit" name="" value="Login" id="button">
             <p>¿No tiene un usuario? <a href="#">Cree uno</a></p>
 
         </form>
