--- a/Login/index.html
+++ b/Login/index.html
@@ -18,7 +18,7 @@
             <input type="text" name= "" placeholder="Usuario">
             <input type="password" name="" placeholder="Contraseña">
             <input type="submit" name="" value="Login" id="button">
-            <p>¿No tiene un usuario? <a href="#">Cree uno</a></p>
+            <p>¿No tiene un usuario? <a href="index2.html">Cree uno</a></p>
 
         </form>
     </div>
