--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -32,7 +32,12 @@
                             </ul>
                             </li>
                         </div>
+                            <form class="form-inline" action="/action_page.php">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Buscar">
+                            <button class="btn" type="submit">Buscar</button>
+                            </form>
                 </ul>
+            
                         
 
             </nav>            
@@ -103,6 +108,10 @@
                 </div>
         </div>  
 <br>
-
+<div class="fila">
+    <div class = "heading">
+        <h2 class = "title">Contacto: +58******; Email:*****@gmail.com</h2>
+    </div>
+</div>
 </body>
 </html>
