--- a/Proyecto SI/dashboard.html
+++ b/Proyecto SI/dashboard.html
@@ -27,7 +27,7 @@
                             <li class="nav-item dropdown" >
                             <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" href="#">Perfil <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="carrito.css">Compras</a></li>
+                            <li><a class="dropdown-item" href="carrito.html">Compras</a></li>
                             <li><a class="dropdown-item" href="password.html">New password</a></li>
                             <li><a class="dropdown-item" href="login.html">Logout</a></li>
                             </ul>
