--- a/Producto/producto.html
+++ b/Producto/producto.html
@@ -28,6 +28,7 @@
                             <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" href="#">Perfil <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="perfil.html">Compras</a></li>
+                            <li><a class="dropdown-item" href="password.html">New password</a></li>
                             <li><a class="dropdown-item" href="login.html">Logout</a></li>
                             </ul>
                             </li>
@@ -41,6 +42,8 @@
     <div class="login_box">
         <label for="descripcion">Nuevo Producto</label>
         <input type="input" placeholder="Indique una breve descripcion">
+        <label for="descripcion">Precio</label>
+        <input type="input" placeholder="Indique el precio del nuevo producto">
         <label >Cargue un thumbnail</label>
         <input type="file" id="myFile">
         <button type="submit" class="btn btn-primary">Submit</button>
