--- a/Proyecto SI/producto.html
+++ b/Proyecto SI/producto.html
@@ -42,6 +42,8 @@
     <div class="login_box">
         <label for="descripcion">Nuevo Producto</label>
         <input type="input" placeholder="Indique una breve descripcion">
+        <label for="descripcion">Precio</label>
+        <input type="input" placeholder="Indique el precio del nuevo producto">
         <label >Cargue un thumbnail</label>
         <input type="file" id="myFile">
         <button type="submit" class="btn btn-primary">Submit</button>
